--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
   push:
     branches: [main]
   schedule:
-    cron: "0 12 * * 3"
+    - cron: "0 12 * * 3"
   workflow_call:
   workflow_dispatch:
 
